--- a/megablog/.env.sample
+++ b/megablog/.env.sample
@@ -1,1 +1,3 @@
-VITE_APPWRITE_URL = "https://nyc.cloud.appwrite.io/v1"
+VITE_APPWRITE_PROJECT_ID = "694486be00168b7cc11d"
+VITE_APPWRITE_PROJECT_NAME = "MegaBlog"
+VITE_APPWRITE_ENDPOINT = "https://nyc.cloud.appwrite.io/v1"
